--- a/wp-content/themes/minzu/style.css
+++ b/wp-content/themes/minzu/style.css
@@ -107,10 +107,10 @@ html[xmlns] .clearfix { display: block; }
 
 /////////////////////////////START OF SITE STYLES/////////////////////////////// */
 
-body { background: url(images/pttr-bg.jpg) 0 0 repeat; }
+body {  }
 
-#header { background: url(images/header-bg.png) 50% 0 no-repeat, url(images/header-pttr-bg.jpg) 0 0 repeat; border-bottom: 1px solid #0049a9; padding: 0 0 20px 0; }
-#header .navbar { background: rgba(0, 47, 153, 0.5); min-height: 47px; line-height: 47px; }
+#header { background-color: #eee; }
+#header .navbar { min-height: 47px; line-height: 47px; }
 #header div.navbar nav { font-size: 1.4em; }
 #header nav li { margin-right: 3%; float: left; text-transform: uppercase; list-style-type: none;  text-shadow: 1px 1px 1px #000;}
 #header nav li a { color: #fff!important; }
@@ -295,10 +295,6 @@ footer.main .social li { margin-top: 0!important; }
 /* 以下為自行添加的元件樣式 */
 
 /* single-grass_course 裡的教師資料 */
-
-.teacher-name {
-
-}
 
 .teacher-avatar {
   width: 100px;
