新增聯絡資訊於首頁下方，完成首頁架構

--- a/wp-content/themes/inkness-child/style.css
+++ b/wp-content/themes/inkness-child/style.css
@@ -37,6 +37,20 @@ Inkness WordPress Theme is distributed under the terms of the GNU GPL v3.
   align-items: center;
 }
 
+.flex-space {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+#contact-info {
+  /*border: 1px solid red;*/
+}
+
+#footertext {
+  text-align: center;
+}
+
 /*.teacher-avatar img {
   max-width: 100px !important;
   max-height: 100px !important;
