--- a/wp-content/themes/inkness-child/style.css
+++ b/wp-content/themes/inkness-child/style.css
@@ -90,6 +90,10 @@ body {
     border-bottom: 1px solid #ccc;
 }
 
+.tax-name {
+  text-align: right;
+}
+
 @media (min-width: 768px) {
   #masthead {
     display: flex;
@@ -164,10 +168,24 @@ body {
 
 /* single-grass_course.php */
 
-#course-price h2 {
-  color: #00bac4 !important;
+#course-info {
+ margin-top: 20px;
 }
 
+#course-copy {
+  color: #333;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.course-price h2 {
+  color: #00bac4 !important;
+  font-size: 45px;
+}
+
+.price-big {
+  display: none !important;
+}
 
 .teacher-avatar {
   max-width: 250px;
@@ -176,7 +194,6 @@ body {
 
 .teacher-box {
   margin-bottom: 10px;
-  padding: 10px;
 }
 
 .teacher-avatar-xs {
@@ -195,6 +212,10 @@ a.teacher-box:hover {
 .teacher-box p {
   font-size: 10px;
   line-height: 145%;
+}
+
+.teacher-info {
+  width: calc( 90% - 50px);
 }
 
 #course-schedule {
@@ -226,6 +247,10 @@ a.teacher-box:hover {
   margin-left: 15px;
 }
 
+.class-content {
+  line-height: 22px;
+}
+
 @media (min-width: 768px) {
 
   #course-main-content {
@@ -234,26 +259,57 @@ a.teacher-box:hover {
     align-items: flex-start;
   }
 
+  #course-entry-content {
+    display: flex;
+  }
+
+  #course-entry-content-left {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+  }
+
   #course-slider {
-    margin-top: 20px;
+    margin-top: 0px;
+    margin-right: 40px;
     width: 400px;
   }
 
   #course-slider img {
-    max-width: 360px;
+    max-width: 400px;
+  }
+
+  .price-big {
+    display: block !important;
+  }
+
+  .price-xs {
+    display: none ;
+  }
+
+  #course-info {
+   margin-top: 0px;
   }
 
   .teacher-mainframe {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
   }
 
   .teacher-box {
+    display: flex;
     width: 30%;
-    margin-left: 15px;
-    margin-right: 15px;
+    padding-top: 10px;
     flex-direction: column;
-    justify-content: flex-start !important;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .teacher-info {
+    width: 90%;
+    text-align: center;
+    color: #666;
   }
 
   .teacher-avatar-xs {
