--- a/wp-content/themes/inkness-child/style.css
+++ b/wp-content/themes/inkness-child/style.css
@@ -19,9 +19,12 @@ Inkness WordPress Theme is distributed under the terms of the GNU GPL v3.
 
 @import url('../inkness/style.css');
 
+/* common elements */
+
 body {
   background-color: #FDF6F6 !important;
   padding-top: 85px;
+  color: #134d5f;
 }
 
 #header-top {
@@ -41,6 +44,10 @@ body {
 
 #primary {
   margin-top: 20px !important;
+}
+
+a {
+  color: #00bac4 !important;
 }
 
 /* index */
@@ -82,7 +89,7 @@ body {
 .menu-main-menu-container {
     position: absolute;
     left: 0;
-    top: 85px;
+    top: 80px;
     z-index: 1000;
     background: #FDF6F6;
     width: 100%;
@@ -90,11 +97,35 @@ body {
     border-bottom: 1px solid #ccc;
 }
 
+.line {
+  display: none;
+}
+
+/* frontpage-titlebox */
+
+.frontpage-titlebox {
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+}
+
+.frontpage-titlebox h3 {
+  margin-right: 20px;
+}
+
+.article-wrapper .featured-thumb {
+  max-height: 200px;
+}
+
 .tax-name {
   text-align: right;
 }
 
 @media (min-width: 768px) {
+  .line {
+    display: block;
+  }
+
   #masthead {
     display: flex;
     justify-content: center;
@@ -103,7 +134,6 @@ body {
 
   .site-branding {
     width: auto !important;
-
   }
 
   .menu-main-menu-container {
