--- a/wp-content/themes/inkness-child/style.css
+++ b/wp-content/themes/inkness-child/style.css
@@ -46,6 +46,10 @@ body {
   margin-top: 20px !important;
 }
 
+article {
+  height: auto;
+}
+
 a {
   color: #00bac4 !important;
 }
@@ -86,6 +90,11 @@ a {
   right: 30px ;
 }
 
+.menu-toggle:hover {
+  background-color: #00bac4;
+  color: #134d5f;
+}
+
 .menu-main-menu-container {
     position: absolute;
     left: 0;
@@ -115,6 +124,10 @@ a {
 
 .article-wrapper .featured-thumb {
   max-height: 200px;
+}
+
+.social-icon-big {
+  display: none;
 }
 
 .tax-name {
@@ -173,18 +186,8 @@ a {
     color: #00bac4 !important;
   }
 
-  #social-icons {
-    float: none !important;
-    position: absolute;
-    right: 20%;
-    bottom: 20px;
-    margin: 0 !important;
-  }
-
-  #subscribe {
-    float: right;
-    position: absolute;
-    right: 20%;
+  .social-icon-big {
+    display: block;
   }
 
 }
@@ -364,6 +367,35 @@ input[type="text"].form-course-name {
   /*color: blue;*/
 }
 
+/* footer */
+
+footer#colophon {
+  background-color: #333;
+  color: #eee;
+}
+
+.name-and-fb {
+  align-items: center !important;
+}
+
+footer h3, .name-and-fb div{
+  margin: 10px 0 20px 0 !important;
+}
+
+@media (min-width: 768px) {
+
+  footer div.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+
+  .social-icon-small {
+    display: none;
+  }
+
+
+}
 
 /* common element*/
 
