--- a/wp-content/themes/inkness-child/style.css
+++ b/wp-content/themes/inkness-child/style.css
@@ -1,19 +1,9 @@
 /*
 Theme Name: Grass.tw - Inkness Child Theme
 Theme URI: http://inkhive.com/product/inkness/
-Author: Rohit Tripathi
-Author URI: http://inkhive.com
 Description: Inkness is a Responsive theme with 3 Column Grid based homepage layout. This theme is overloaded with plenty of featured, including an amazing reponsive slider, Multiple Page Layouts, Configurable Sidebar Locations, Footer Widgets & Easy to use admin Panel. This theme is upgradable to a pro version to enable more features. .pot file has been provided, so that you can translate theme into any language. Already Translated into Italian and French.
 Version: 1.0.3.1
-License: GNU General Public License
-License URI: license.txt
-Text Domain: inkness
-Domain Path: /languages/
-Tags: light, custom-background, two-columns, right-sidebar, responsive-layout, custom-menu, sticky-post, theme-options, threaded-comments, translation-ready, gray, left-sidebar, custom-menu, editor-style, featured-images, full-width-template, sticky-post, theme-options, threaded-comments
-
-Inkness is based on Underscores http://underscores.me/, (C) 2012-2013 Automattic, Inc.
-Inkness WordPress Theme, Copyright 2013 Rohit Tripathi.
-Inkness WordPress Theme is distributed under the terms of the GNU GPL v3.
+Template: Inkness
 */
 
 
