--- a/wp-content/themes/inkness-child/style.css
+++ b/wp-content/themes/inkness-child/style.css
@@ -50,6 +50,10 @@ a {
 
 /* index */
 
+#primary-home .entry-title a {
+  font-size: 18px !important;
+}
+
 #header-top {
   border-bottom: 1px solid #ccc;
 }
@@ -335,8 +339,6 @@ a.teacher-box:hover {
 
 @media (min-width: 768px) {
 
-
-
   #course-main-content {
     display: flex;
     justify-content: center;
@@ -447,6 +449,11 @@ a.teacher-box:hover {
   .teacher-content {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+  }
+
+  .course-teacher-frame {
+    display: flex;
     justify-content: center;
   }
 }
