--- a/wp-content/themes/inkness-child/style.css
+++ b/wp-content/themes/inkness-child/style.css
@@ -16,6 +16,10 @@ body {
   color: #134d5f;
 }
 
+img.main_logo {
+  max-width: 267px !important;
+}
+
 @media (max-width: 767px) {
   img.main_logo {
     width: calc( 100vw - 100px);
@@ -741,6 +745,15 @@ form.form-payment-confirm input.form-course-id {
     margin-bottom: 35px;
   }
 
+  #contact-info #media-gallery img {
+    height: 30px;
+    margin-right: 15px;
+  }
+
+  #contact-info #media-gallery .dpplogo {
+    background-color: #ddd;
+    padding: 3px 10px;
+  }
 
 /* common element*/
 
