--- a/wp-content/themes/inkness-child/style.css
+++ b/wp-content/themes/inkness-child/style.css
@@ -757,13 +757,13 @@ form.form-payment-confirm input.form-course-id {
   }
 
   #contact-info #media-gallery img {
-    height: 30px;
+    height: 35px;
     margin-right: 15px;
+    padding: 5px;
   }
 
-  #contact-info #media-gallery .dpplogo {
-    background-color: #ddd;
-    padding: 3px 10px;
+  img.dpplogowhite:hover {
+    border: 1px solid #222;
   }
 
 /* common element*/
