--- a/wp-content/uploads/master-slider/custom.css
+++ b/wp-content/uploads/master-slider/custom.css
@@ -5,5 +5,6 @@
  - Every changes here will be overwritten
 ===============================================================*/
 
+.ms-parent-id-9 > .master-slider{ background:#000000; }
 .ms-parent-id-8 > .master-slider{ background:rgba(0, 0, 0, 0); }
 .ms-parent-id-5 > .master-slider{ background:rgba(0, 0, 0, 0); }
